--- a/books/templates/authors.html
+++ b/books/templates/authors.html
@@ -1,21 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Authors</title>
-</head>
-<body>
-{% if request.user.is_authenticated %}
-    <h2>Hello {{ request.user.username|title }}. You last logged in at {{ request.user.last_login|date:'D d M, Y' }}</h2>
-{% else %}
-    <h2>Hello Guest</h2>
-{% endif %}
+{% extends "base.html" %}
 
-<main>
-{% for author in authors %}
-    <h3>{{ author.name }}</h3>
-{% endfor %}
-
-</main>
-</body>
-</html>
+{% block content %}
+    {% for author in authors %}
+        <h3><a href="{% url 'author-detail' author.pk %}">{{ author.name }}</a></h3>
+    {% endfor %}
+{% endblock %}
