--- a/books/templates/book-detail.html
+++ b/books/templates/book-detail.html
@@ -3,4 +3,10 @@
 	<p>By {% for author in book.authors.all %}<a href="{% url 'author-detail' author.pk %}">{{ author.name }}</a>{% endfor %}</p>
 	{% if book.is_favourite %}<span class="highlight">favourite</span>{% endif %}
 	<p>{{ book.review|linebreaks }}</p>
+    <p class="meta">
+        Reviewed on <strong>{{ book.date_reviewed|date:"D d M Y" }}</strong>
+        {% if book.reviewed_by %}
+            by {{ book.reviewed_by.get_full_name|default:book.reviewed_by.username }}
+        {% endif %}
+    </p>
 </div>
